# Kimi_Agent_Deployment_v16

./: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-BgsuLUTy.css  index-DvQKS3mG.js  index.css  index.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/effects/: ZoomOverlay.tsx
src/components/layout/: BottomToolbar.tsx  Sidebar.tsx  TitleBar.tsx
src/components/views/: CanvasView.tsx  GridView.tsx
src/store/: LibraryContext.tsx
