[package]
name = "aura-desktop"
version = "1.0.9"
description = "Aura desktop app"
authors = ["Aura"]
edition = "2021"

[lib]
name = "aura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde_json = "1"
rfd = "0.15"
